--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,10 @@
                     <h2 class="text-center text-md font-light text-white">O seu jogo favorito</h2>
                 </div>
                 <div class="flex flex-col gap-y-3 p-4 bg-roxo-escuro-card rounded-xl">
-                    <p id="fraseExemplo" class="text-justify text-white font-medium">Este aplicativo será um excelente teste para suas habilidades em HTML, CSS e JS. Você criará controles de formulário personalizados e usará JavaScript para gerar senhas aleatórias.</p>
+                    <p id="fraseExemplo" class="text-justify text-white font-medium">Um dia me disseram que as nuvens não eram de algodão um dia me disseram que os ventos às vezes erram a direção e tudo ficou tão claro um intervalo na escuridão uma estrela de brilho raro um disparo para um coração</p>
                     <div class="flex justify-center gap-x-2 bg-roxo-medio-card p-2 rounded-xl">
                         <h3 class="text-white font-light"><i class="fa-solid fa-file"></i> <span id="qtdPalavras">5</span> palavras</h3>
-                        <h3 class="text-white font-light"><i class="fa-solid fa-clock"></i> <span id="tempo">5</span> segundos</h3>
+                        <h3 class="text-white font-light"><i class="fa-solid fa-clock"></i> <span id="tempo">15</span> segundos</h3>
                     </div>
                 </div>
             </div>
@@ -66,11 +66,14 @@
                     </div>
                 </div>
                 <div id="buttons" class="p-4 flex gap-x-2">
-                    <button class="w-10 h-10 bg-cinza-card hover:bg-roxo-escuro-card hover:text-white transition-all duration-300" id="btnDarkMode">
-                        <i class="fa-solid fa-eye"></i>
+                    <button class="w-10 h-10 bg-cinza-card hover:bg-roxo-escuro-card hover:text-white transition-all duration-300" id="btnVoltar">
+                        <i class="fa-solid fa-arrow-right-to-bracket"></i>
                     </button>
                     <button class="w-10 h-10 bg-cinza-card hover:bg-roxo-escuro-card hover:text-white transition-all duration-300" id="btnReiniciarJogo">
                         <i class="fa-solid fa-arrows-rotate"></i>
+                    </button>
+                    <button class="w-10 h-10 bg-cinza-card hover:bg-roxo-escuro-card hover:text-white transition-all duration-300" id="btnGerarFase">
+                        <i class="fa-solid fa-shuffle"></i>
                     </button>
                     <button class="w-10 h-10 bg-cinza-card hover:bg-roxo-escuro-card hover:text-white transition-all duration-300" id="btnMostrarPlacar">
                         <i class="fa-solid fa-clipboard"></i>
@@ -95,6 +98,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/frases.js"></script>
     <script src="assets/js/placar.js"></script>
 </body>
 </html>
