--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=,, initial-scale=1.0">
-    <title>Palatempo</title>
+    <title>Rapid Write</title>
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- CDN Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -12,13 +13,10 @@
             theme: {
                 extend: {
                     colors: {
-                        "branco-card": "#FEFEFD",
                         "roxo-card": "#070F2B",
-                        "roxo-escuro-card": "#1B1A55",
-                        "roxo-medio-card": "#535C91",
+                        "roxo-secundario": "#1B1A55",
+                        "roxo-terciario": "#535C91",
                         "cinza-card": "#303C58",
-                        "azul": "#1D24CA",
-                        "branco": "#FFFFFF"
                     }
                 }
             }
@@ -33,24 +31,24 @@
 <body class="h-screen w-screen transition-all duration-500">
     <div id="telaInicial" class="flex flex-col gap-y-4 justify-center items-center h-full w-full">
         <div class="">
-            <h1 class="text-center text-7xl font-bold text-white">Palatempo</h1>
-            <h2 class="text-center text-xl font-bold text-white mt-2">Seu jogo de palavras favorito</h2>
+            <h1 class="text-center text-7xl font-bold text-white">Rapid Write</h1>
+            <h2 class="text-center text-xl font-bold text-white mt-2">Escreva rápido, escreva furioso!</h2>
         </div>
         <form id="inicarJogo" class="flex flex-col gap-y-2">
-            <input id="usuario" autocomplete="off" required title="Insira seu nome para comçeçar a jogar" class="w-40 p-2 text-blue rounded-xl font-medium focus:border-b-4 border-blue-700 transition-all duration-300">
-            <button type="submit" class="p-2 bg-azul rounded-xl font-bold text-lg text-white focus:border-b-4 border-branco transition-all duration-300">Iniciar</button>
+            <input id="usuario" autocomplete="off" required title="Insira seu nome para comçeçar a jogar" class="w-40 md:w-96 p-2 bg-roxo-secundario text-white rounded-xl font-medium focus:border-b-4 border-roxo-terciario transition-all duration-300">
+            <button type="submit" class="p-2 bg-roxo-secundario rounded-xl font-bold text-lg text-white focus:border-b-4 border-branco transition-all duration-300">Iniciar</button>
         </form>
     </div>
-    <main id="jogo" class="hidden h-full w-full flex justify-center items-center">
-        <div class="max-h-screen shadow-lg shadow-black w-4/5 bg-roxo-card flex flex-col rounded-xl p-4 gap-y-4">
+    <main id="jogo" class="hidden h-full w-full flex justify-center items-center p-4">
+        <div class="max-h-full shadow-lg shadow-black w-4/5 md:w-1/3 bg-roxo-card flex flex-col rounded-xl p-4 gap-y-4">
             <div class="flex flex-col gap-y-4">
                 <div class="flex flex-col gap-y-1">
-                    <h2 class="text-center text-3xl font-bold text-white">Bem vindo ao Palatempo!</h2>
-                    <h2 class="text-center text-md font-light text-white">O seu jogo favorito</h2>
+                    <h2 class="text-center text-3xl font-bold text-white">Bem vindo ao Rapid Write!</h2>
+                    <h2 class="text-center text-md font-light text-white">Escreva rápido, escreva furioso!</h2>
                 </div>
-                <div class="flex flex-col gap-y-3 p-4 bg-roxo-escuro-card rounded-xl">
+                <div class="flex flex-col gap-y-3 p-4 bg-roxo-secundario rounded-xl">
                     <p id="fraseExemplo" class="text-justify text-white font-medium">Um dia me disseram que as nuvens não eram de algodão um dia me disseram que os ventos às vezes erram a direção e tudo ficou tão claro um intervalo na escuridão uma estrela de brilho raro um disparo para um coração</p>
-                    <div class="flex justify-center gap-x-2 bg-roxo-medio-card p-2 rounded-xl">
+                    <div class="flex justify-center gap-x-2 bg-roxo-terciario p-2 rounded-xl">
                         <h3 class="text-white font-light"><i class="fa-solid fa-file"></i> <span id="qtdPalavras">5</span> palavras</h3>
                         <h3 class="text-white font-light"><i class="fa-solid fa-clock"></i> <span id="tempo">15</span> segundos</h3>
                     </div>
@@ -59,8 +57,8 @@
             <hr>
             <div class="flex flex-col">
                 <div class="flex flex-col gap-y-2">
-                    <textarea name="campoDigitacao" id="campoDigitacao" class="rounded-xl w-full h-auto p-2 bg-roxo-escuro-card text-white font-medium" placeholder="Escreva a frase aqui"></textarea>
-                    <div class="flex justify-center gap-x-2 bg-roxo-medio-card p-2 rounded-xl">
+                    <textarea name="campoDigitacao" id="campoDigitacao" class="rounded-xl w-full h-auto p-2 bg-roxo-secundario text-white font-medium" placeholder="Escreva a frase aqui"></textarea>
+                    <div class="flex justify-center gap-x-2 bg-roxo-terciario p-2 rounded-xl">
                         <h3 class="text-white font-medium"><span id="contadorCaracteres">0</span> Caracteres</h3>
                         <h3 class="text-white font-medium"><span id="contadorPalavras">0</span> Palavras</h3>
                     </div>
