--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <h2 class="text-center text-xl font-bold text-white mt-2">Escreva rápido, escreva furioso!</h2>
         </div>
         <form id="inicarJogo" class="flex flex-col gap-y-2">
-            <input id="usuario" autocomplete="off" required placeholder="Insira seu nome para comçeçar a jogar" class="w-9/12 md:w-96 p-2 bg-roxo-secundario text-white rounded-xl font-medium focus:border-b-4 border-roxo-terciario transition-all duration-300">
+            <input id="usuario" autocomplete="off" required placeholder="Insira seu nome para comçeçar a jogar" class="w-full md:w-96 p-2 bg-roxo-secundario text-white rounded-xl font-medium focus:border-b-4 border-roxo-terciario transition-all duration-300">
             <button type="submit" class="p-2 bg-roxo-secundario rounded-xl font-bold text-lg text-white focus:border-b-4 border-branco transition-all duration-300">Iniciar</button>
         </form>
     </div>
